<resources>
    <string name="app_name">MySurvey</string>
    <string name="mysurveies">我的问卷</string>
    <string name="newsurvey">创建新问卷</string>
    <string name="surveyname">问卷名称</string>
    <string name="surveynamehint">请输入问卷名称</string>
    <string name="surveydescription">问卷说明</string>
    <string name="surveydescriptionhint">请输入问卷说明</string>
    <string name="startnew">开始创建问卷</string>
    <string name="addNewQuestion">+添加新题</string>

    <string name="questiontitle">题目标题</string>
    <string name="singlequestion">单选题</string>
    <string name="multiquestion">多选题</string>

</resources>
