<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/activity_new_survey_customtitle"
        layout="@layout/custom_title"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/divide_05_black" />

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surveyname"
            android:textSize="18sp"
            android:textColor="@color/maincolor"/>
        <EditText
            android:id="@+id/activity_newsurvey_surveyname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/surveynamehint"
            android:textSize="16sp"
            android:textColorHint="@color/wordlevel2"
            android:textColor="@color/wordlevel2"
            />

    </LinearLayout>

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surveydescription"
            android:textSize="18sp"
            android:textColor="@color/maincolor"/>
        <EditText
            android:id="@+id/activity_newsurvey_surveydesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surveydescriptionhint"
            android:textSize="16sp"
            android:textColorHint="@color/wordlevel2"
            android:textColor="@color/wordlevel2"
            />

    </LinearLayout>

    <Button
        android:id="@+id/activity_new_survey_startnew_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/startnew"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"/>


</LinearLayout>